# DSRPracticeCRUD

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Makefile  main.c
Client/headers/: connection.h  coords_msg.h  crud_functions.h  json_parsing.h  readline_settings.h
Client/source/: connection.c  coords_msg.c  crud_functions.c  json_parsing.c  readline_settings.c
Server/: CMakeLists.txt  Makefile  main.c
Server/headers/: conn_thread.h  crud_functions.h  crud_io.h  db_operations.h  json_parsing.h
Server/source/: conn_thread.c  crud_functions.c  db_operations.c  json_parsing.c
lib/include/: messages.h  operations.h
lib/messages/: CMakeLists.txt  messages.c  messages.h
